Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84034

qdoc: QML parser fails to correctly parse signals that take parameters

    XMLWordPrintable

Details

    • 5
    • 87cffaf9ed4022ac05d3a91d9f26ed1415bdecf6 (qt/qttools/dev) c7755a190ec9484ff97804de75d484e0a1d20cef (qt/qttools/5.15)
    • Da Vinci sprint 8

    Description

      The parameter type is treated as the parameter name, and the name is dropped from the generated documentation.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes