qdoc: Fix parsing of QML signals that take parameters

The signature of a QML signal can resemble that of a method, so we
need to parse it as such.

Fixes: QTBUG-84034
Pick-to: 5.15
Change-Id: I8506cd3c2cb469053c750ef6d2335cd1b85c3f1a
Reviewed-by: Andy Shaw <andy.shaw@qt.io>
Reviewed-by: Paul Wicking <paul.wicking@qt.io>